# py-wikisage

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/py_wikisage/: cli.py
src/py_wikisage/core/: arxiv_client.py  ask_wiki.py  compiler.py  config.py  evidence_merge.py  lint_wiki.py  llm_utils.py  project_templates.py  prompts.py  qmd_wrapper.py  research_gaps.py  state.py  utility.py  wiki_index.py
src/py_wikisage/prompts/: __init__.py  capture_knowledge.txt  extract_articles.txt  extract_assets.txt  extract_concepts.txt  extract_papers.txt  research_gaps.txt  summarize_article.txt  summarize_paper.txt  update_synthesis.txt  write_article.txt
src/py_wikisage/templates/: AGENTS.md  __init__.py
tests/: test_ask_wiki.py  test_cli.py  test_compiler.py  test_config.py  test_evidence_merge.py  test_init.py  test_lint_wiki.py  test_prompts.py  test_qmd.py  test_research_gaps.py  test_search.py  test_state.py
